force-app/main/default/objects/AiAgentMessageAttachmentBridge__dll/fields/contentVersionId__c.field-meta.xml
<CustomField>
    <fullName>contentVersionId__c</fullName>
    <label>contentVersionId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>contentVersionId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>