force-app/main/default/objects/AiAgentMessageAttachmentBridge__dll/fields/KQ_messageId__c.field-meta.xml
<CustomField>
    <fullName>KQ_messageId__c</fullName>
    <label>KQ_messageId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_messageId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>