force-app/main/default/objects/AiAgentMessageAttachmentBridge__dll/fields/messageId__c.field-meta.xml
<CustomField>
    <fullName>messageId__c</fullName>
    <label>messageId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>messageId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>