force-app/main/default/objects/AiAgentMessageAttachmentBridge__dll/fields/sfDriveId__c.field-meta.xml
<CustomField>
    <fullName>sfDriveId__c</fullName>
    <label>sfDriveId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>sfDriveId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>